--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,8 +9,9 @@ bin_PROGRAMS=main
 #main_SOURCES=LearnOpenGL/hello_triangle.cpp LearnOpenGL/glad.c
 #main_SOURCES=LearnOpenGL/hello_triangle_indexed.cpp LearnOpenGL/glad.c
 #main_SOURCES=LearnOpenGL/shaders_uniform.cpp LearnOpenGL/glad.c
-main_SOURCES=LearnOpenGL/shaders_interpolation.cpp LearnOpenGL/glad.c
-
+#main_SOURCES=LearnOpenGL/shaders_interpolation.cpp LearnOpenGL/glad.c
+#main_SOURCES=LearnOpenGL/shaders_class.cpp LearnOpenGL/glad.c LearnOpenGL/learnopengl/shader_s.h
+main_SOURCES=LearnOpenGL/texture.cpp LearnOpenGL/glad.c LearnOpenGL/learnopengl/shader_s.h LearnOpenGL/textures/stb_image.cpp
 
 main_CPPFLAGS=-I/usr/include/SDL2 -D_REENTRANT `pkg-config SDL2_image --cflags`
 
